# xDNS

./: Cargo.toml  README.md
src/: main.rs
src/api/: auth.rs  common.rs  mod.rs  recursor.rs
src/auth/: auth.rs  mod.rs  zone.rs  zone_content_generator.rs
src/recursor/: client.rs  mod.rs  query_statistic.rs  recursor.rs
src/recursor/cache/: cache.rs  entry_key.rs  message_cache.rs  message_cache_entry.rs  mod.rs
src/server/: handler.rs  mod.rs  udp_server.rs
