[package]
name = "xDNS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
async-trait = "0.1.53"
env_logger = "0.9.0"
r53 = { path = "../r53" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread"] }
